gccida/g1/get_attr_prefix_data16
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_prefix_data16/src/insn-attrtab.c:20945:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_prefix_data16/src/insn-attrtab.c:20950:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 20460, "get_attr_prefix_data16"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_prefix_data16/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_prefix_data16/src/insn-attrtab.c:20950:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 20460, "get_attr_prefix_data16"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_prefix_data16/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_prefix_data16/src/obj/insn-attrtab.o] Error 1
